<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team">Команда</string>
    <string name="teamAuthorTitle">Над приложением работали</string>
    <string name="teamAuthor1">Михаил Шумихин</string>
    <string name="teamAuthor2">Мария Кузнецова</string>
    <string name="teamAuthor3">Максим Юрищев</string>
    <string name="teamAuthor4">Денис Кузьмин</string>
    <string name="main">Главная</string>
    <string name="favourite">Избранное</string>
    <string name="team">Команда</string>
</resources>
