<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TeamFragment">


    <TextView
        android:id="@+id/teamTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_24dp"
        android:paddingTop="19dp"
        android:paddingBottom="19dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:textSize="22sp"
        android:fontFamily="@font/ys_display_medium"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/teamTitle"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teamAuthorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamAuthorTitle"
            android:textSize="32sp"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/black"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <TextView
            android:id="@+id/teamAuthor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamAuthor1"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/teamAuthor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamAuthor2"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/teamAuthor3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamAuthor3"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/teamAuthor4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamAuthor4"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
